# FingerFlexAid

./: .gitignore  CMakeLists.txt  README.md  hardware.h  main.ino  platformio.ini  todo.md
include/: hardware.h
src/: FingerKinematics.cpp  FingerKinematics.h  ServoController.cpp  ServoController.h  main.cpp
src/core/: DeviceManager.cpp  DeviceManager.hpp  DeviceManagerImpl.hpp  MotorController.hpp  ServoController.hpp
src/mock/: MockMotor.cpp  MockMotor.hpp  MockServo.cpp  MockServo.hpp
src/models/: GloveState.cpp  GloveState.hpp  Motor.cpp  Motor.hpp  Servo.cpp  Servo.hpp
tests/: DeviceManagerTests.cpp  GloveStateTests.cpp  MotorTests.cpp  ServoTests.cpp
web/app/: views.py
web/web/: settings.py  urls.py
